  scalability
* added BootstrappingDependencyEvent for notifying the pre-refresh dependency activities

Package org.springframework.osgi.io
* improved OsgiBundleResource#getFile() method when dealing with resources in expanded bundles
* OsgiBundleResource#lastModified() works even when the underlying bundle cannot be resolved to a File

Package org.springframework.osgi.service
* added descriptive exception when invoking non-public methods on class proxies (caused by classes with final mehtods)
* added ServiceProxyDestroyedException to indicate the illegal usage of a destroyed proxy
* refined dynamic proxies (unary cardinality) to throw ServiceProxyDestroyedException instead of IllegalStateException
* refined static proxies (multi cardinality) to throw ServiceProxyDestroyedException if used after being destroyed
* introduced ServiceReferenceProxy interface (available through ImportedOsgiServiceProxy) for accessing the native 
  service reference
* OsgiServiceFactoryBean performs type check validation on given interfaces at startup

Package org.springframework.osgi.util
* fixed internal handling of nested beans when discovering transitive dependencies of a bean
* fixed internal handling of 'depends-on' beans when discovering transitive dependencies of a bean

Package org.springframework.osgi.test
* removed usage of PackageAdmin for resolving bundles

Package org.springframework.osgi.web
* improved namespace detection strategy for OsgiBundleXmlWebApplicationContext
* fixed problem with OsgiBundleXmlWebApplicationContext publishing null namespaces as OSGi properties
* DefaultContextPathStrategy supports SpringSource Application Platform's Web-ContextPath header
* introduced configuration property to web extender that allows deployed wars to be undeployed during shutdown
* improved war undeployment by adding a timeout and better shutdown synchronization
* improved handling of bundle locations given as URLs in DefaultContextPathStrategy